--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-1.98MB/s(Youtube:不良林), server: 196.247.59.154, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇩🇪 德国-894.4KB/s(Youtube:不良林), server: 165.22.73.126, port: 23335, type: ss, cipher: aes-256-cfb, password: 7d99ae502227454ea998d71e4b62a388}
+  - {name: 🇨🇦 加拿大-1.99MB/s(Youtube:不良林), server: 196.247.59.154, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-1.00MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32003, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.33MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32000, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-403.0KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65076, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
-  - {name: 🇷🇴 罗马尼亚-4.48MB/s(Youtube:不良林), server: 5.183.102.34, port: 37667, type: vmess, uuid: 66f93c8f-4458-41d3-e447-f0b57d893527, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.18MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-1.64MB/s(Youtube:不良林), server: 72.140.224.195, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇸🇬 新加坡-1.75MB/s(Youtube:不良林), server: 8.214.33.158, port: 80, type: vmess, uuid: cb81e6ab-1d83-4ac1-f0ad-ae5c2a7c29ef, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 8.214.33.158}}
   - {name: 🇺🇸 美国-3.12MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇺🇸 美国-2.79MB/s(Youtube:不良林), server: 172.99.188.71, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.98MB/s(Youtube:不良林)
+      - 🇩🇪 德国-894.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
       - 🇨🇳 中国-403.0KB/s(Youtube:不良林)
-      - 🇷🇴 罗马尼亚-4.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.18MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.64MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.75MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.79MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-1.98MB/s(Youtube:不良林)
+      - 🇩🇪 德国-894.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
       - 🇨🇳 中国-403.0KB/s(Youtube:不良林)
-      - 🇷🇴 罗马尼亚-4.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.18MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.64MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.75MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.79MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.98MB/s(Youtube:不良林)
+      - 🇩🇪 德国-894.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
       - 🇨🇳 中国-403.0KB/s(Youtube:不良林)
-      - 🇷🇴 罗马尼亚-4.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.18MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.64MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.75MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.79MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-1.98MB/s(Youtube:不良林)
+      - 🇩🇪 德国-894.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
       - 🇨🇳 中国-403.0KB/s(Youtube:不良林)
-      - 🇷🇴 罗马尼亚-4.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.18MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.64MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.75MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.79MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.98MB/s(Youtube:不良林)
+      - 🇩🇪 德国-894.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
       - 🇨🇳 中国-403.0KB/s(Youtube:不良林)
-      - 🇷🇴 罗马尼亚-4.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.18MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.64MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.75MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.79MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-1.98MB/s(Youtube:不良林)
+      - 🇩🇪 德国-894.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
       - 🇨🇳 中国-403.0KB/s(Youtube:不良林)
-      - 🇷🇴 罗马尼亚-4.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.18MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.64MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.75MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.79MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-1.98MB/s(Youtube:不良林)
+      - 🇩🇪 德国-894.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
       - 🇨🇳 中国-403.0KB/s(Youtube:不良林)
-      - 🇷🇴 罗马尼亚-4.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.18MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.64MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.75MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.79MB/s(Youtube:不良林)
