--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,12 +5,12 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇩🇪 德国-2.63MB/s(Youtube:不良林), server: 193.108.117.75, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
-  - {name: 🇺🇸 美国-601.7KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20711, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-2.26MB/s(Youtube:不良林), server: 193.108.117.75, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇩🇪 德国-2.58MB/s(Youtube:不良林), server: 193.108.117.75, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇫🇷 法国-700.4KB/s(Youtube:不良林), server: 195.154.200.150, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇨🇳 中国-743.7KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇩🇪 德国-2.33MB/s(Youtube:不良林), server: 193.108.117.75, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇸🇬 新加坡-421.6KB/s(Youtube:不良林), server: 51.79.177.159, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
-  - {name: 🇨🇦 加拿大-1.92MB/s(Youtube:不良林), server: 196.247.59.154, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-3.61MB/s(Youtube:不良林), server: 85.208.108.20, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇯🇵 日本-3.62MB/s(Youtube:不良林), server: 85.208.108.20, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇺🇸 美国-2.47MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇺🇸 美国-1.91MB/s(Youtube:不良林), server: 172.99.188.71, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
   - {name: 🇺🇸 美国-2.78MB/s(Youtube:不良林), server: 172.99.188.71, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
@@ -21,12 +21,12 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇩🇪 德国-2.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-601.7KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.26MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.58MB/s(Youtube:不良林)
+      - 🇫🇷 法国-700.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-743.7KB/s(Youtube:不良林)
       - 🇩🇪 德国-2.33MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-421.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.92MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.61MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.47MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.78MB/s(Youtube:不良林)
@@ -36,12 +36,12 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇩🇪 德国-2.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-601.7KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.26MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.58MB/s(Youtube:不良林)
+      - 🇫🇷 法国-700.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-743.7KB/s(Youtube:不良林)
       - 🇩🇪 德国-2.33MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-421.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.92MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.61MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.47MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.78MB/s(Youtube:不良林)
@@ -52,12 +52,12 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇩🇪 德国-2.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-601.7KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.26MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.58MB/s(Youtube:不良林)
+      - 🇫🇷 法国-700.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-743.7KB/s(Youtube:不良林)
       - 🇩🇪 德国-2.33MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-421.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.92MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.61MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.47MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.78MB/s(Youtube:不良林)
@@ -72,12 +72,12 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇩🇪 德国-2.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-601.7KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.26MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.58MB/s(Youtube:不良林)
+      - 🇫🇷 法国-700.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-743.7KB/s(Youtube:不良林)
       - 🇩🇪 德国-2.33MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-421.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.92MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.61MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.47MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.78MB/s(Youtube:不良林)
@@ -87,12 +87,12 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇩🇪 德国-2.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-601.7KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.26MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.58MB/s(Youtube:不良林)
+      - 🇫🇷 法国-700.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-743.7KB/s(Youtube:不良林)
       - 🇩🇪 德国-2.33MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-421.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.92MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.61MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.47MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.78MB/s(Youtube:不良林)
@@ -103,12 +103,12 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇩🇪 德国-2.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-601.7KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.26MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.58MB/s(Youtube:不良林)
+      - 🇫🇷 法国-700.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-743.7KB/s(Youtube:不良林)
       - 🇩🇪 德国-2.33MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-421.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.92MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.61MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.47MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.78MB/s(Youtube:不良林)
@@ -128,12 +128,12 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇩🇪 德国-2.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-601.7KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.26MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.58MB/s(Youtube:不良林)
+      - 🇫🇷 法国-700.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-743.7KB/s(Youtube:不良林)
       - 🇩🇪 德国-2.33MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-421.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.92MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.61MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.47MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.78MB/s(Youtube:不良林)
