--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
+  - {name: 🇨🇦 加拿大-1.99MB/s(Youtube:不良林), server: 196.247.59.154, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-3.68MB/s(Youtube:不良林), server: 85.208.108.94, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇩🇪 德国-2.64MB/s(Youtube:不良林), server: 193.108.117.75, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
   - {name: 🇩🇪 德国-2.26MB/s(Youtube:不良林), server: 193.108.117.75, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇩🇪 德国-2.58MB/s(Youtube:不良林), server: 193.108.117.75, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
-  - {name: 🇫🇷 法国-700.4KB/s(Youtube:不良林), server: 195.154.200.150, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇨🇳 中国-743.7KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇩🇪 德国-2.33MB/s(Youtube:不良林), server: 193.108.117.75, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇸🇬 新加坡-2.11MB/s(Youtube:不良林), server: node-tw-c-01.texo.network, port: 8443, type: trojan, password: 91fc891c-510f-3a1b-aa77-9bee2c759522, sni: node-tw-c-01.texo.network, skip-cert-verify: true}
   - {name: 🇯🇵 日本-3.62MB/s(Youtube:不良林), server: 85.208.108.20, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇺🇸 美国-2.47MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇺🇸 美国-1.91MB/s(Youtube:不良林), server: 172.99.188.71, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇨🇦 加拿大-1.99MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.68MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.64MB/s(Youtube:不良林)
       - 🇩🇪 德国-2.26MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.58MB/s(Youtube:不良林)
-      - 🇫🇷 法国-700.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-743.7KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.33MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.11MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.47MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
+      - 🇨🇦 加拿大-1.99MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.68MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.64MB/s(Youtube:不良林)
       - 🇩🇪 德国-2.26MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.58MB/s(Youtube:不良林)
-      - 🇫🇷 法国-700.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-743.7KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.33MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.11MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.47MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇨🇦 加拿大-1.99MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.68MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.64MB/s(Youtube:不良林)
       - 🇩🇪 德国-2.26MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.58MB/s(Youtube:不良林)
-      - 🇫🇷 法国-700.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-743.7KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.33MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.11MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.47MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
+      - 🇨🇦 加拿大-1.99MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.68MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.64MB/s(Youtube:不良林)
       - 🇩🇪 德国-2.26MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.58MB/s(Youtube:不良林)
-      - 🇫🇷 法国-700.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-743.7KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.33MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.11MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.47MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
+      - 🇨🇦 加拿大-1.99MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.68MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.64MB/s(Youtube:不良林)
       - 🇩🇪 德国-2.26MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.58MB/s(Youtube:不良林)
-      - 🇫🇷 法国-700.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-743.7KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.33MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.11MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.47MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇨🇦 加拿大-1.99MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.68MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.64MB/s(Youtube:不良林)
       - 🇩🇪 德国-2.26MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.58MB/s(Youtube:不良林)
-      - 🇫🇷 法国-700.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-743.7KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.33MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.11MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.47MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇨🇦 加拿大-1.99MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.68MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.64MB/s(Youtube:不良林)
       - 🇩🇪 德国-2.26MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.58MB/s(Youtube:不良林)
-      - 🇫🇷 法国-700.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-743.7KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.33MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.11MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.47MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
