--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-1.99MB/s(Youtube:不良林), server: 196.247.59.154, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-3.68MB/s(Youtube:不良林), server: 85.208.108.94, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇩🇪 德国-2.64MB/s(Youtube:不良林), server: 193.108.117.75, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇩🇪 德国-2.26MB/s(Youtube:不良林), server: 193.108.117.75, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇸🇬 新加坡-2.11MB/s(Youtube:不良林), server: node-tw-c-01.texo.network, port: 8443, type: trojan, password: 91fc891c-510f-3a1b-aa77-9bee2c759522, sni: node-tw-c-01.texo.network, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-3.62MB/s(Youtube:不良林), server: 85.208.108.20, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-2.47MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-1.91MB/s(Youtube:不良林), server: 172.99.188.71, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
-  - {name: 🇺🇸 美国-2.78MB/s(Youtube:不良林), server: 172.99.188.71, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇨🇳 中国-153.5KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
+  - {name: 🇨🇦 加拿大-1.58MB/s(Youtube:不良林), server: 196.247.59.154, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-1.06MB/s(Youtube:不良林), server: 196.247.59.154, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-241.8KB/s(Youtube:不良林), server: 120.233.150.146, port: 65095, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
+  - {name: 🇸🇬 新加坡-334.7KB/s(Youtube:不良林), server: 51.79.177.159, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
   - {name: 🇺🇸 美国-2.54MB/s(Youtube:不良林), server: 172.99.188.71, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇦 加拿大-904.1KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇩🇪 德国-1.42MB/s(Youtube:不良林), server: 193.108.117.75, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇫🇷 法国-842.8KB/s(Youtube:不良林), server: 195.154.200.150, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇬🇧 英国-849.3KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.99MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.68MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.64MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.26MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.11MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-153.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.58MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-241.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-334.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-904.1KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.42MB/s(Youtube:不良林)
+      - 🇫🇷 法国-842.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-849.3KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-1.99MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.68MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.64MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.26MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.11MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-153.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.58MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-241.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-334.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-904.1KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.42MB/s(Youtube:不良林)
+      - 🇫🇷 法国-842.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-849.3KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.99MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.68MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.64MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.26MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.11MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-153.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.58MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-241.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-334.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-904.1KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.42MB/s(Youtube:不良林)
+      - 🇫🇷 法国-842.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-849.3KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-1.99MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.68MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.64MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.26MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.11MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-153.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.58MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-241.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-334.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-904.1KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.42MB/s(Youtube:不良林)
+      - 🇫🇷 法国-842.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-849.3KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.99MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.68MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.64MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.26MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.11MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-153.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.58MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-241.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-334.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-904.1KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.42MB/s(Youtube:不良林)
+      - 🇫🇷 法国-842.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-849.3KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-1.99MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.68MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.64MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.26MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.11MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-153.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.58MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-241.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-334.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-904.1KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.42MB/s(Youtube:不良林)
+      - 🇫🇷 法国-842.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-849.3KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-1.99MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.68MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.64MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.26MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.11MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-153.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.58MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-241.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-334.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-904.1KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.42MB/s(Youtube:不良林)
+      - 🇫🇷 法国-842.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-849.3KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
